public/assets/css/style.css
:root {
  --primary-100: #DBE2FC;
  --primary-200: #B8C6F8;
  --primary-300: #94A9F5;
  --primary-400: #708DF1;
  --primary-500: #4C70EE;
  --primary-600: #3D5ABE;
  --primary-700: #2E438F;
  --primary-800: #1F2D5F;
  --primary-900: #0F1630;
  --gray-100: #F2F2F2;
  --gray-200: #E6E6E6;
  --gray-300: #D9D9D9;
  --gray-400: #CCCCCC;
  --gray-500: #BFBFBF;
  --gray-600: #999999;
  --gray-700: #737373;
  --gray-800: #4D4D4D;
  --gray-900: #262626;
}

*,
*:before,
*:after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: Arial, Helvetica, sans-serif;
  overflow-x: hidden;
  margin: 0;
}

#wrapper {
  display: flex;
  flex-direction: column;
}

#content {
  flex: 1;
  min-height: 100vh;

  background-color: #f1f1f1;

  display: flex;
  flex-direction: column;
  row-gap: 1.5rem;

  overflow-y:auto;

  padding: 1rem;
}

footer,
header {
  flex: none;
}

main {
  flex: auto;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

#footer {
  padding: 0.8rem 0;

  display: flex;
  justify-content: center;
}

#footer span {
  color: #888;
}

#top-bar {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 0.5rem 1rem;
  background-color: var(--primary-800);
  color: #fff;
}

#mobile-menu {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 999;

  display: flex;
  flex-direction: column;
  justify-content: space-between;

  background-color: var(--primary-800);
  color: #fff;
  padding: 1rem;
}

.mobile-menu-top {
  display: flex;
  flex-direction: row;
  justify-content: right;
}

#side-menu {
  height: 100vh;

  background-color: var(--primary-800);
  color: #fff;

  padding: 1rem;

  display: none;
  flex-direction: column;
  justify-content: space-between;
}

#side-menu-content {
  display: flex;
  flex-direction: column;
  row-gap: 2rem;
}

.navigation {
  display: flex;
  flex-direction: column;
}

.navigation a {
  color: #fff;
  font-size: 1.2rem;
  padding: 0.5rem 0;
}

/************************************/
/* REUSABLES */
/************************************/
 
a,
a:hover {
  text-decoration: none;
  color: inherit;
}

button {
  cursor: pointer;
}

.btn {
  border: none;
}

.btn-reset {
  border: none;
  background: none;
  display: flex;
  justify-content: center;
  align-items: center;
}

.btn-primary {
  background-color: var(--primary-900);
}

.btn-primary:hover {
  background-color: var(--primary-700);
}

.button-group {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

/* TEXT */

h1 {
  font-weight: 600;
}

h2 {
  font-weight: 700;
}

h3 {
  font-weight: 700;
  font-size: 1.5rem;
}

.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6, p {
  margin: 0;
}

/* CARDS */

.card {
  border: none;

  box-shadow: 2px 2px 16px 0px rgba(0, 0, 0, 0.1);
}

.card-event {
  padding: 1.25rem 0.75rem;
}

.card-event-date {
  color: var(--gray-600);
}

.card-event-title {
  color: var(--primary-700);
}

/* Forms */

.form-cols-2 {
  display: grid;
  grid-template-columns: auto auto;
  column-gap: 0.25rem;
}

/* Togglable right-side menu */

.toggleable-menu {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
}

.toggleable-menu-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

/* Other */

.key-value {
  display: flex;
  flex-direction: column;
}

.key-value span {
  color: var(--gray-500);
}

.key-value p {
  color: var(--primary-700);
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;

  width: 100%;
  height: 100%;

  background-color: rgba(0, 0, 0, 0.2);
  
  display: flex;
  justify-content: center;
  align-items: center;

  z-index: 50;
}

.cms-modal {
  display: flex;
  flex-direction: column;

  row-gap: 1rem;

  background-color: #fff;
  padding: 1rem;
  border-radius: 0.5rem;
}

/************************************/
/* LOGIN */
/************************************/

.login {
  height: 80vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;  
}

.form-login {
  display: flex;
  flex-direction: column;
  gap: 1rem;

  padding: 1rem 0.7rem;
  background-color: #fff;

  border-radius: .5rem;

  max-width: 24rem;
  width: 100%;

}

/************************************/
/* EVENTS */
/************************************/

#events-page {
  display: flex;
  column-gap: 0.6rem;
}

#events-content {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  row-gap: 1rem;
}

.events-filters {
  display: grid;
  grid-template-columns: repeat(3, minmax(0, 1fr));
  column-gap: 0.5rem;
}

.list-events {
  display: grid;
  grid-template-columns: auto;
  gap: 0.75rem;
}

#events-form {
  padding: 0.5rem;
}

.events-form-title {
  padding: 0.5rem;
}

.card-event-detail {
  padding: 0.5rem;

  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.card-event-detail .key-value p {
  font-weight: 600;
}

.card-event-image {
  width: 30rem;
  max-width: 100%;
}

.mobile-only {
  display: block;
}

.desktop-only {
  display: none;
}

.desktop-event-edit-btn {
  display: none;
}

.mobile-event-edit-btn {
}

/************************************/
/* USERS */
/************************************/

.list-users {
  display: flex;
  flex-direction: column;
  row-gap: 0.6rem;
}

.card-user {
  padding: 0.5rem;

  display: grid;
  grid-template-columns: repeat(4, minmax(0, 1fr));
}

.card-user .key-value p {
  font-weight: 700;
}

/************************************/
/* BREAKPOINTS */
/************************************/

@media only screen and (min-width: 768px) {
  #wrapper {
    max-height: 100vh;
    flex-direction: row;
  }

  #mobile-menu {
    display: none;
  }

  #top-bar {
    display: none;
  }

  #side-menu {
    display: flex;
  }

  .button-group {
    flex-direction: row;
  }

  .toggleable-menu {
    position: unset;
    width: 20rem;
    height: fit-content;
  }

  .toggleable-menu-close {
    display: none;
  }

  .list-events {
    grid-template-columns: auto auto;
  }

  .desktop-only {
    display: block;
  }

  .mobile-only {
    display: none;
  }
}

@media only screen and (min-width: 1024px) {
}

